fix: remove extra spacing at the top of the menu section

--- a/src/pages/Menu/Menu.module.css
+++ b/src/pages/Menu/Menu.module.css
@@ -5,7 +5,7 @@
 	position: relative;
 	align-items: center;
 	gap: 0px;
-	top: 10vh;
+
 	margin-top: 64px;
 }
 
